# LLM-Zoomcamp-2026

./: pyproject.toml
01-Agentic-Rag/: Homework-01.ipynb  check_sqlite_running.ipynb  faq.db  final.ipynb  rag_helper.py.1
01-intro/: agent.ipynb  agentic_rag_lab.ipynb  faq.db  faq.db-shm  faq.db-wal  rag_helper.py  readme.md  sqlite-ingest.ipynb  start.ipynb
01-intro/.ipynb_checkpoints/: final-checkpoint.ipynb  rag_helper-checkpoint.py  sqlite-ingest-checkpoint.ipynb  start-checkpoint.ipynb
02-vector-search-hw/: Homework-02.py  main.py  pyproject.toml
