[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "minsearch>=0.1.1",
    "openai>=2.44.0",
    "torch>=2.12.1",
    "toyaikit>=0.0.11",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
